# RA-Touch

./: README.md  index.html  pyproject.toml  requirements.txt  setup.py  style.css
configs/: finetune-data-config.yaml
ra_touch/: engine.py  evaluate.py  evaluate_json.py  ta_integrator.py  tg_retriever.py  train.py  train_retriever.py
ra_touch/llama/: llama_adapter.py
ra_touch/util/: eval_util.py  misc.py
scripts/: eval_ra_touch.sh  train_ra_touch.sh  train_retriever.sh
tvl_enc/: .gitignore  main_pretrain.py  tvl.py
tvl_enc/scripts/: eval_tvl_enc.sh  train_tvl_enc.sh
