[project]
name = "ra-touch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "autofaiss>=2.17.0",
    "diffusers>=0.33.1",
    "easydict>=1.13",
    "fairscale>=0.4.13",
    "gradio>=5.25.2",
    "huggingface-hub>=0.30.2",
    "matplotlib>=3.10.1",
    "open-clip-torch==2.24.0",
    "open3d>=0.19.0",
    "openai==0.28",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "plotly>=6.0.1",
    "scikit-learn==1.3.2",
    "scipy>=1.15.2",
    "sentencepiece>=0.2.0",
    "tensorboard>=2.19.0",
    "timm==0.9.7",
    "torch==2.5.1",
    "torchvision>=0.20.1",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
    "wandb>=0.19.10",
]
